fixed css for arrows and solved issues where arrow was not visible

--- a/src/assets/css/navbar/navbar.scss
+++ b/src/assets/css/navbar/navbar.scss
@@ -227,7 +227,7 @@ button::-moz-focus-inner {
 }
 
 .collapse {
-	display: none;
+	display: block;
 }
 
 .dropdown-toggle::after {
@@ -1016,3 +1016,25 @@ button.btn {
 	src: local('Maven Pro Bold'), local('MavenPro-Bold'), url(https://fonts.gstatic.com/s/mavenpro/v11/7Au4p_AqnyWWAxW2Wk3OdkEdP3kD-Vs48Q.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
+
+.container {
+	max-width: 10px;
+  }
+
+// Media Queries - 576
+@media only screen and (max-width: 768px) {
+
+	@media (min-width: 992px){
+  
+  
+  
+	}
+	.collapse:not(.show) {
+		display: block;
+	}
+  
+  
+  
+  
+  }
